--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Header -->
         <header class="header">
             <h1 class="logo">🎵 LyricFlow</h1>
-            <p class="tagline">Elegant Music Experience</p>
+            <p class="tagline">Selamat Datang Di Website Musik Lirik Buatan Dev Aldo</p>
         </header>
 
         <!-- Song List Container - Auto populated dari folder songs/ -->
@@ -24,7 +24,7 @@
         <div class="player-section" id="playerSection" style="display: none;">
             <div class="now-playing">
                 <div class="album-art">
-                    <img id="currentCover" src="" alt="Album Cover">
+                    <img id="currentCover" src="cover" alt="Album Cover">
                     <div class="vinyl-spin"></div>
                 </div>
                 <div class="track-info">
