Correct tagline greeting in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Header -->
         <header class="header">
             <h1 class="logo">🎵 LyricFlow</h1>
-            <p class="tagline">Selamat Data1g Di Website Musik Lirik Buatan Dev Aldo</p>
+            <p class="tagline">Selamat Datang Di Website Musik Lirik Buatan Dev Aldo</p>
         </header>
 
         <!-- Song List Container - Auto populated dari folder songs/ -->
