--- a/songs/song1.html
+++ b/songs/song1.html
@@ -5,25 +5,13 @@ CARA PENGGUNAAN:
 3. Website akan otomatis load file ini
 -->
 
-<script>
-// Data lagu akan di-extract oleh main.js
-window.registerSong && window.registerSong({
-    id: 'song1',
-    title: 'Midnight Dreams',
-    artist: 'Luna Eclipse',
-    cover: 'https://images.unsplash.com/photo-1493225255756-d9584f8606e9?w=400',
-    audio: 'assets/audio/song1.mp3', // Ganti dengan path audio kamu
-    lyrics: `00:00:05|Dreaming in the midnight hour
-00:00:12|Stars above are shining bright
-00:00:20|Whispers of a distant power
-00:00:28|Guiding through the night
-00:00:35|Moonlight dances on the water
-00:00:42|Reflections of our love
-00:00:50|Time stands still, moments captured
-00:00:58|Like stars from above
-00:01:10|Midnight dreams take me away
-00:01:18|To a place where we can stay
-00:01:25|Forever in this endless night
-00:01:35|Holding on to morning light`
-});
+<script type="application/json" id="song-data">
+{
+  "id": "song1",
+  "title": "Midnight Dreams",
+  "artist": "Luna Eclipse",
+  "cover": "https://images.unsplash.com/photo-1493225255756-d9584f8606e9?w=400",
+  "audio": "songs/song1.mp3",
+  "lyrics": "00:00:05|Dreaming in the midnight hour"
+}
 </script>
