--- a/songs/song1.html
+++ b/songs/song1.html
@@ -10,6 +10,7 @@ CARA PENGGUNAAN:
   "id": "song1",
   "title": "Midnight Dreams",
   "artist": "Luna Eclipse",
+  "album" : "Luna Ado",
   "cover": "https://images.unsplash.com/photo-1493225255756-d9584f8606e9?w=400",
   "audio": "songs/song1.mp3",
   "lyrics": "00:00:05|Dreaming in the midnight hour"
