--- a/songs/song1.html
+++ b/songs/song1.html
@@ -11,7 +11,7 @@ CARA PENGGUNAAN:
   "title": "Midnight Dreams",
   "artist": "Luna Eclipse",
   "cover": "https://images.unsplash.com/photo-1493225255756-d9584f8606e9?w=400",
-  "audio": "https://files.catbox.moe/seemdk.mp4",
+  "audio": "https://image2url.com/r2/default/audio/1769657057538-9bf0e165-08e7-4647-9e28-2e8d073c77f6.mp3",
   "lyrics": "00:00:05|Dreaming in the midnight hour"
 }
 </script>
